plugins {
  id 'java'
  id 'org.springframework.boot' version '3.2.0'
  id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.sarmich'
version = '0.0.1-SNAPSHOT'

java {
  sourceCompatibility = '17'
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {

  runtimeOnly 'org.postgresql:postgresql'

  implementation("org.passay:passay:1.6.2")
  implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0")
  // JJWT
  implementation("io.jsonwebtoken:jjwt-api:0.12.3")
  implementation("io.jsonwebtoken:jjwt-impl:0.12.3")
  implementation("io.jsonwebtoken:jjwt-jackson:0.12.3")
  implementation("org.springframework.boot:spring-boot-starter-data-redis")


  implementation("javax.xml.bind:jaxb-api:2.4.0-b180830.0359")
// https://mvnrepository.com/artifact/com.google.ortools/ortools-java
  implementation("com.google.ortools:ortools-java:9.9.3963")

  implementation("org.mapstruct:mapstruct:1.5.3.Final")
  annotationProcessor("org.mapstruct:mapstruct-processor:1.5.3.Final")
  implementation("org.projectlombok:lombok-mapstruct-binding:0.1.0")

  // Lombok
  compileOnly 'org.projectlombok:lombok:1.18.30'
  annotationProcessor 'org.projectlombok:lombok:1.18.30'
// https://mvnrepository.com/artifact/org.apache.poi/poi
  implementation 'org.apache.poi:poi:5.2.5'
// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
  implementation 'org.apache.poi:poi-ooxml:5.2.5'
  implementation("com.google.firebase:firebase-admin:9.3.0")

  // MapStruct
  compileOnly 'org.mapstruct:mapstruct-jdk8:1.5.5.Final'
  annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-mail'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-web-services'

  // Google ID token verification
  implementation 'com.google.api-client:google-api-client:2.5.0'
  implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'
  implementation("org.liquibase:liquibase-core")

  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
  useJUnitPlatform()
}
compileJava {
  options.annotationProcessorPath = configurations.annotationProcessor
}
